font spacing issues

--- a/src/fonts/fonts.css
+++ b/src/fonts/fonts.css
@@ -4,21 +4,21 @@
   font-style: normal;
   font-weight: 400;
   src: url('GT-Walsheim-Pro-Regular.woff') format('woff');
-  font-display: fallback;
+  font-display: auto;
 }
 @font-face {
   font-family: 'GT Walsheim Bold';
   font-style: bold;
   font-weight: 700;
   src: url('GT-Walsheim-Pro-Bold.woff') format('woff');
-  font-display: fallback;
+  font-display: auto;
 }
 @font-face {
   font-family: 'GT Walsheim Light';
   font-style: normal;
   font-weight: 200;
   src: url('GT-Walsheim-Pro-Light.woff') format('woff');
-  font-display: fallback;
+  font-display: auto;
 }
 
 /* Freight Text */
